--- a/site/components/common/Searchbar/Searchbar.module.css
+++ b/site/components/common/Searchbar/Searchbar.module.css
@@ -3,7 +3,7 @@
 }
 
 .input {
-  @apply relative text-sm bg-accent-0 text-base w-full transition-colors duration-150 border border-accent-2;
+  bg-transparent px-3 py-4 appearance-none w-full transition duration-150 ease-in-out pr-10;
 }
 
 .input::placeholder {
